# aurora_sound_to_light

./: .cursorfiles  .cursorignore  .cursorrules  .cursortasks  .gitignore  .pre-commit-config.yaml  README.md  RELEASE.md  __init__.py  _files.md  _task.md  audio_processor.py  cache.py  codecov.yml  config_flow.py  const.py  effect_creator.py  effects.py  effects_impl.py  jest.config.js  light.py  light_controller.py  manifest.json  optimization.py  package-lock.json  package.json  panel.py  pyproject.toml  requirements_test.txt  security.py  sensor.py  services.py  services.yaml  setup.py  tasks  vitest.config.js  web-test-runner.config.js
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  test.yml
core/: __init__.py  audio_processor.py  effect_engine.py  light_controller.py
coverage/: index.html  lcov.info
coverage/frontend/: aurora-dashboard.js.html  aurora-performance-monitor.js.html  index.html
coverage/lcov-report/: aurora-performance-monitor.js.html  index.html
coverage/lcov-report/frontend/: aurora-dashboard.js.html  aurora-performance-monitor.js.html  index.html
custom_components/: aurora_sound_to_light
docs/: index.md
docs/configuration/: basic.md
docs/guides/: dashboard.md  effects.md  performance.md  quick-start.md
docs/troubleshooting/: common-issues.md
effects/: __init__.py  base_effect.py  bass_pulse.py  color_wave.py
frontend/: .babelrc  aurora-dashboard.js  aurora-dashboard.test.js  aurora-effect-selector.js  aurora-group-manager.js  aurora-media-controls.js  aurora-performance-monitor.js  aurora-visualizer.js  babel.config.js  index.html  index.js  jest.config.js  package-lock.json  package.json  tasks  test-performance-monitor.html
frontend/test/: aurora-dashboard.test.js  aurora-effect-selector.test.js  aurora-performance-monitor.test.js  aurora-visualizer.test.js  setup.js
tests/: README.md  conftest.py  requirements_test.txt  test_audio_processor.py  test_cache.py  test_light_controller.py
tests/core/: test_effect_engine.py  test_effect_engine_validation.py  test_effects.py  test_optimization.py
tests/frontend/: jest.config.js  test-aurora-performance-monitor.js
tests/frontend/e2e/: aurora-core.e2e.test.js  aurora-performance-monitor.js  performance-monitor.e2e.test.js  serve.py  test-helpers.js  test-performance-monitor.html  test-performance-monitor.js
tests/integration/: conftest.py  test_integration_loading.py  test_performance_monitoring.py
translations/: __init__.py  en.json
(+16 files in other folders)
